--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<title>Escape/unscape html</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="libs/clipboardjs/clipboard.min.js"></script>
 	<style>
 	* {
 		outline: none;
@@ -41,6 +43,34 @@
 		border: none;
 		margin: 5px;
 	}
+	.copyBtn-container {
+		float: right;
+		position: relative;
+	}
+	#copy {
+		margin-top: 30px;
+		background-color: #666;
+	}
+	#copy-tooltip {
+		position: absolute;
+		background-color: #333;
+		color: #fff;
+		border-radius: 2px;
+		padding: 4px 10px;
+		font-size: 11px;
+		top: -2px;
+		display: none;
+	}
+	#copy-tooltip:after {
+		content: '';
+		position: absolute;
+		width: 0px;
+		height: 0px;
+		bottom: -9px;
+		left: 25px;
+		border: 5px solid transparent;
+		border-top: 5px solid #333;
+	}
 	button:hover {
 		opacity: 0.8;
 	}
@@ -72,6 +102,24 @@
 			$('#unescapeBtn').click(function() {
 				$('#output').text(htmlDecode($('#input').val()));
 			})
+			$('#copy').click(function() {
+				$('#copy-tooltip').show();
+			})
+			$('#copy').mouseout(function() {
+				$('#copy-tooltip').hide();
+			})
+
+			var clipboard = new Clipboard('#copy');
+
+			clipboard.on('success', function(e) {
+			    console.log('success');
+
+			    e.clearSelection();
+			});
+
+			clipboard.on('error', function(e) {
+			    console.log('error');
+			});
 		})
 	</script>
 </head>
@@ -80,13 +128,17 @@
 		<div class="title">Escape/Unscape Html strings</div>
 	</header>
 	<div class="container">
-	<div class="col-md-12">
-		<textarea id="input" placeholder="Enter your unescaped or scaped string here"></textarea>
-		<button id="escapeBtn">Escape</button><button id="unescapeBtn">Unscape</button>
-		<h5>Output</h5>
-		<pre id="output"></pre>
-	</div>
-		
+		<div class="col-md-12">
+			<textarea id="input" placeholder="Enter your unescaped or scaped string here"></textarea>
+			<button id="escapeBtn">Escape</button><button id="unescapeBtn">Unscape</button>
+			<div class="copyBtn-container">
+				<div id="copy-tooltip">Copied!</div>
+				<button id="copy" data-clipboard-action="copy" data-clipboard-target="#output"><i class="ion-ios-copy-outline"></i> Copy output clipboard</button>	
+			</div>
+			
+			<h5>Output</h5>
+			<pre id="output"></pre>
+		</div>
 	</div>
 </body>
 </html>
